# rgbdriver

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  Makefile  dockermake  dockermake.bat  dockermake_conf  dockermake_stage2  dockermake_stage3
color2duty/: CMakeLists.txt  color2duty.c
color2duty/include/: color2duty.h
etc/init.d/: reverse_proxy  rgbdaemon
fasti2c/: CMakeLists.txt
include/: fast_i2c.h
pcadriver/: CMakeLists.txt
pcadriver/include/: pcadriver.h
rgbdriver/: CMakeLists.txt  main.c  shm_server.h
src/: main.c  yeelightd.c
src/lib/: fast_i2c.c  pcadriver.c
testing/: test_network.py3  test_tcp.py  ubuscall.py3  udplookup_tester.py3  yee_send_mcast.py3
usr/libexec/rpcd/: rgbdriver
usr/share/rpcd/acl.d/: rgbdriver.json
